# fss

./: .eslintrc.json  .gitignore  README.md  docker-compose.yaml  filestorage  package.json
api/: Cargo.toml  Makefile.toml  run.sh
api/docker/: Dockerfile  Dockerfile.test
api/src/: app.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  typescriptify.rs  utils.rs
api/src/app/: app.rs  count.rs  delete.rs  download.rs  list.rs  query_entity.rs  responder.rs  upload.rs
api/src/db/: connection.rs  db_executor.rs
api/src/domain/: model.rs  schema.rs
api/src/utils/: multipart.rs  storage.rs
api/tests/: integration_test.rs
assets/: .gitignore  icons.ai  package.json
assets/scripts/: build-icon.js
cli/: cli.py
cli/src/: delete.py  files.py  get_file.py  option_error.py  request.py  upload.py
infra/: migration.sh
infra/docker/data/: Dockerfile
infra/docker/mysql/: Dockerfile  Dockerfile.migration
infra/migrations/2020-02-09-140205_create_files/: up.sql
integration/: .gitignore  bulkupload_for_test.sh  package.json  run_cli_integration_test  run_integration_test  run_web_e2e_test
integration/src/: index.ts
web/: .dockerignore  .gitignore  .pacakge-deps-cache.json  babel.config.js  index.debug.html  index.production.html  nginx.conf  package.json  sw-precache-static-files.json  tsconfig.json  webpack.config.js  webpack.dll.config.js
web/docker/: Dockerfile
web/icons/: icons.css  icons.eot  icons.html
web/scripts/: dll.js  make-env.js  server.js  sw-hash.js
web/src/: actions.ts  index.tsx  state.ts  types.d.ts
web/src/domain/: entities.ts  (+1 more)
(+20 files in other folders)
