[package]
name = "file_storage_server"
version = "0.1.0"
authors = ["Taketoshi Aono <brn@b6n.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["r2d2", "mysql", "serde_json", "chrono"] }
mysql = "17.0.0"
r2d2_mysql = "17.0.0"
chrono = {version = "0.4", features = ["serde"]}
dotenv = "0.9.0"
futures = "0.3.1"
actix = "0.9.0"
actix-web = "2"
actix-rt = "1"
actix-cors = "0.2.0"
actix-multipart = "0.2.0"
actix-service = "1.0.6"
r2d2 = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.7.1"
failure = "0.1.6"
diesel_logger = "0.1.0"
typescript-definitions = { git = "https://github.com/onelson/typescript-definitions", branch = "no-debug-attrs"}

[dev-dependencies]
bytes = "0.5"
actix-utils = "1.0.6"

[[bin]]
name = "dummy"
path = "src/main.rs"

[[bin]]
name = "file_storage_server"
path = "src/main.rs"

[[bin]]
name = "typescriptify"
path = "src/typescriptify.rs"